01-webflux-demo-lab7 initial commit and small changes to other projects - mainly spring boot version upgrades